--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-hello world, initial
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta name="description" content="Exactly Which Way is Forward?!..">
+<meta name="keywords" content="keywords">
+<title>Ankit Vadehra</title>
+<link rel="shortcut icon" href="favicon.ico">
+
+<!-- The Panda made me do it. Do your part, Save the World.!-->
+
+<link rel="stylesheet" type="text/css" href="style.css" media="all">
+</head>
+<body style="background-color: rgb(19, 194, 226);">  
+<div id="container">
+	<div id="contentContainer">
+    	<div id="content">
+        	<ul id="pages">
+            	<li id="home" class="page">
+                    <h1><a href="#monkey" class="nav monkey" title="The Panda Made Me Do It..:(^.^)">Ankit Vadehra</a></h1>
+                    <a href="#about" class="nav about">About</a>
+                    <a href="#networks" class="nav networks">Networks</a>
+                    <a href="#contact" class="nav contact">Contact</a>
+                </li>
+            	<li id="networks" class="page">
+                    <a href="#home" class="nav home">Home</a>
+                    <a href="#about" class="nav about">About</a>
+                    <a href="#contact" class="nav contact">Contact</a>
+                    <h2>Networks</h2>
+                    <ul>
+                    	<li id="facebook"><a href="https://www.facebook.com/ankit.vadehra" target="_top">Facebook</a></li>
+                    	<li id="gplus"><a href="https://plus.google.com/+AnkitVadehr%C4%81" target="_top">Google+</a></li>
+                    	<li id="quora"><a href="http://www.quora.com/Ankit-Vadehra" target="_top">Quora</a></li>
+                    	<li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
+                    	<li id="blogspot"><a href="#" title="Currently Not Available!!" target="_top">Blogspot</a></li>
+                    	<li id="twitter"><a href="http://www.twitter.com/ankitvad" target="_top">Twitter</a></li>
+                    	<li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
+                    </ul>
+                </li>
+            	<li id="about" class="page">
+                    <a href="#home" class="nav home">Home</a>
+                    <a href="#networks" class="nav networks">Networks</a>
+                    <a href="#contact" class="nav contact">Contact</a>
+                    <h2>About</h2>
+                    <p>Heya! I'm Ankit Vadehra, a 2<sup>nd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Istitute of Technology, Vellore</a>,
+                    Enrolled in <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>.</p>
+                    <p>I love coding, reading, learning new stuff, tackling new projects/topics and watching <span title=":D">TV Shows</span>.</p>
+                   <p>Machine Learning and Physics is what amazes me, currently..</p>
+                                        
+                </li>
+            	<li id="contact" class="page">
+                    <a href="#home" class="nav home">Home</a>
+                    <a href="#about" class="nav about">About</a>
+                    <a href="#networks" class="nav networks">Networks</a>
+                    <h2>Contact</h2>
+                    <ul>
+                    	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
+                    	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
+                    	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
+                    	<li id="resume"><a href="ankitvad_resume.pdf"><span>(Click)</span> Resume</a></li>
+                    	<li id="phone"><a href="#"><span>Not Preferred.(Email)</span>Phone</a></li>
+                    </ul>
+                </li>
+            	<li id="monkey" class="page">
+                	<a style="background-color: rgb(255, 255, 255);" href="#home" class="nav home">
+                   <b><p> The Panda Made Me Do It.</p></b><br>
+                    <center><img height=216 width=432 src="wwf_logo_evolution.jpg" alt="The Panda Made Me Do It"><br><br></center>
+                    <!--<center><img src="wwf-panda-logo.jpg"><br><br></center>-->
+                    <b><p>Do Your Part:<br>wwf.panda.org</p></b>
+                    </a>
+                    
+                </li>
+            </ul>
+        </div>
+        <div id="footer">
+        <center>
+        <br><br>
+        <p>Proudy Hosted, and Handled using:</p> 
+        <p><a href="http://pages.github.com/"><img src="http://pages.github.com/images/logo.svg">
+        </a></p>
+        <br>
+        -Ankit.Vadehra | "The Code is free, but it's Priceless."
+        </center>	
+        <!-- #footer end -->
+        </div>
+    <!-- #content end -->
+    </div>
+</div>
+<!-- #container end --> 
+
+<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="jquery.color.js"></script>
+<script type="text/javascript" src="jquery.scrollto-min.js"></script>
+<script type="text/javascript" src="custom.js"></script>
+
+
+</body>
+</html>
