--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
         </div>
         <div id="footer">
         <center>
-        <br><br>
+        <br>
         <p>Proudy Hosted, and Handled using:</p> 
         <p><a href="http://pages.github.com/"><img src="http://pages.github.com/images/logo.svg">
         </a></p>
-        <br>
+        <p>Free Domain: <a href="http://www.freedomain.co.nr/" target="_blank" title="Free Domain Name"><img src="http://muoesaa.imdrv.net/nrlink.gif" width="88" height="31" border="0" alt="Free Domain Name" /></a></p>
+        
         -Ankit.Vadehra | "The Code is free, but it's Priceless."
         </center>	
         <!-- #footer end -->
