--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a 2<sup>nd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Istitute of Technology, Vellore</a>,
+                    <p>Heya! I'm Ankit Vadehra, a 2<sup>nd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
                     Enrolled in <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>.</p>
                     <p>I love coding, reading, learning new stuff, tackling new projects/topics and watching <span title=":D">TV Shows</span>.</p>
                    <p>Machine Learning and Physics is what amazes me, currently..</p>
