--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a 3<sup>rd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
+                    <p>Heya! I'm <a href="http://www.typelogic.com/intj.html">Ankit Vadehra</a>, a 3<sup>rd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
                     Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working under <a href="http://bktripathy.com/">Prof. B.K Tripathy</a>, on Social network Anonymization Techniques.<br><br>I love coding, Compiler and Programming Language Design, Machine Learning, Algorithm Design and almost everything fun (<b>:D</b>) ..</p>
                                         
                 </li>
