--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
                     <p>Heya! I'm Ankit Vadehra, a 3<sup>rd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
-                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working under <a href="http://bktripathy.com/">Prof. B.K Tripathy</a>, on Social network Anonymization Techniques.<br><br>I love Coding, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
+                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working under <a href="http://bktripathy.com/">Prof. B.K Tripathy</a>, on Applied Machine Learning Projects.<br><br>I love Coding, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
                                         
                 </li>
             	<li id="contact" class="page">
