--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
                     <p>Heya! I'm Ankit Vadehra, a 3<sup>rd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
-                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working under <a href="http://bktripathy.com/">Prof. B.K Tripathy</a>, on Applied Machine Learning Projects.<br><br>I love Coding, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
+                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working on different Machine Learning and Natural Language Processing topics..<br><br>I love Coding, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
                                         
                 </li>
             	<li id="contact" class="page">
@@ -52,12 +52,12 @@
                     <a href="#about" class="nav about">About</a>
                     <a href="#networks" class="nav networks">Networks</a>
                     <h2>Contact</h2>
-                    <b><p style="font-size:25px"><i><font color="#9445BD">Want to get in touch? Great!<br>Drop me a Line.</p></font></i></b>
+                    <b><p style="font-size:25px"><i><font color="#9445BD">Want to get in touch? Drop me a Line.</p></font></i></b>
                     <ul>
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="http://goo.gl/2BlvKu"><span>(Click)</span> Resume</a></li>
+                    	<li id="resume"><a href="http://goo.gl/DmC63Z"><span>(Click)</span> Resume</a></li>
                     	<li id="phone"><a href="#"><span>Not Preferred.(Email)</span>Phone</a></li>
                     </ul>
                 </li>
