--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                     <a href="#about" class="nav about">About</a>
                     <a href="#networks" class="nav networks">Networks</a>
                     <h2>Contact</h2>
-                    <b><p style="font-size:25px"><i><font color="#9445BD">Want to get in touch? Drop me a Line.</p></font></i></b>
+                    <b><p style="font-size:22px"><i><font color="#9445BD">Want to get in touch? Drop me a Line.</p></font></i></b>
                     <ul>
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="http://goo.gl/DmC63Z"><span>(Click)</span> Resume</a></li>
+                    	<li id="resume"><a href="http://goo.gl/n4u6IG"><span>(Click)</span> Resume</a></li>
                     	<li id="phone"><a href="#"><span>Not Preferred.(Email)</span>Phone</a></li>
                     </ul>
                 </li>
