--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="http://goo.gl/IyyGjW"><span>(Click)</span> Resume</a></li>
+                    	<li id="resume"><a href="http://goo.gl/W1FnYd"><span>(Click)</span> Resume</a></li>
                     	<li id="phone"><a href="#"><span>Not Preferred.(Email)</span>Phone</a></li>
                     </ul>
                 </li>
