Updating The Blog Entry

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>Networks</h2>
                     <ul>
+                        <li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
+                        <li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
+                        <li id="blog"><a href="/blog/blog.html" target="_top">Blog</a></li>
                     	<li id="facebook"><a href="https://www.facebook.com/ankit.vadehra" target="_top">Facebook</a></li>
                     	<li id="gplus"><a href="https://plus.google.com/+AnkitVadehr%C4%81" target="_top">Google+</a></li>
                     	<li id="quora"><a href="http://www.quora.com/Ankit-Vadehra" target="_top">Quora</a></li>
-                    	<li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
                     	<li id="twitter"><a href="http://www.twitter.com/ankitvad" target="_top">Twitter</a></li>
-                    	<li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
+
                     </ul>
                 </li>
             	<li id="about" class="page">
@@ -44,7 +46,7 @@
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
                     <p>Heya! I'm Ankit Vadehra, a 3<sup>rd</sup>-Year <a href="http://www.vit.ac.in/scse/btec_csc_engg.asp">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
-                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working on different Machine Learning and Natural Language Processing topics..<br><br>I love Coding, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
+                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working on different Machine Learning and Natural Language Processing topics..<br><br>I love <a href="/blog/projects.html">Coding</a>, Programming Language Design, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
                                         
                 </li>
             	<li id="contact" class="page">
