--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="footer">
         <center>
         <br>
-        <p>Proudy Hosted, and Handled using:</p> 
+        <p>Proudly Hosted, and Handled using:</p> 
         <p><a href="http://pages.github.com/"><img src="http://pages.github.com/images/logo.svg">
         </a></p>
        <a href="http://www.freedomain.co.nr/" target="_blank" title="Free Domain Name"></a>
