--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
                     	<li id="resume"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMeUktRGRUSjhlNU0/view?usp=sharing" target="_blank"><span>(Click)</span> Resume</a></li>
-                    	<li id="phone"><a href="#"><span>Not Preferred.(Email)</span>Phone</a></li>
+                    	<li id="CV"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMdXdEeVg3a2RHUms/view?usp=sharing" target="_blank"><span>(CLick)</span>CV</a></li>
                     </ul>
                 </li>
             	<li id="monkey" class="page">
