--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a 4<sup>th</sup>-Year <a href="http://www.vit.ac.in/admissions/coursepage/1/1">Computer Science</a> student at <a href="http://www.vit.ac.in/">Vellore Institute of Technology, Vellore</a>,
-                    Enrolled in the <span title="B.Eng">B.Tech Degree course (2012 - 2016)</span>. I am currently working on different Machine Learning and Natural Language Processing topics..<br><br>I love <a href="/blog/projects.html">Coding</a>, Fuzzy Set &amp; Logic, Machine Learning, Natural Language Processing, and almost everything fun (<b>:D</b>)..</p>
+                    <p>Heya! I'm Ankit Vadehra, a Data Science Engineer @ <a href="http://www.kayako.com/">Kayako</a>, working on automated and parallel ETL pipeline.<br> I'll graduate from <a href="http://www.vit.ac.in/">VIT University, Vellore</a>, with a <span title="B.Eng">B.Tech in Computer Science</span> in May, 2016. <br>I have succinct interest in projects involving Machine Learning and Natural Language Processing.<br><br>I love <a href="/blog/projects.html">Coding</a>, Good music &amp; watching TV Series.</p>
                                         
                 </li>
             	<li id="contact" class="page">
@@ -59,8 +58,8 @@
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMLWtDZ0w5TDlaV00/view?usp=sharing" target="_blank"><span>(Click)</span> Resume</a></li>
-                    	<li id="CV"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMV3VwT05xWVE0Mm8/view?usp=sharing" target="_blank"><span>(CLick)</span>CV</a></li>
+                    	<li id="resume"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMejlJcU8wVjIzN1U/view?usp=sharing" target="_blank"><span>(Click)</span> Resume</a></li>
+                    	<li id="CV"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMMDdHY1hpWEVUQms/view?usp=sharing" target="_blank"><span>(CLick)</span>CV</a></li>
                     </ul>
                 </li>
             	<li id="monkey" class="page">
