--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="keywords" content="keywords">
 <title>Ankit Vadehra</title>
 <!--<link rel="shortcut icon" href="favicon.ico"> -->
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon1.ico" type="image/x-icon">
+<link rel="icon" href="/favicon1.ico" type="image/x-icon">
 
 <!-- The Panda made me do it. Do your part, Save the World.!-->
 
