--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMejlJcU8wVjIzN1U/view?usp=sharing" target="_blank"><span>(Click)</span> Resume</a></li>
-                    	<li id="CV"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMMDdHY1hpWEVUQms/view?usp=sharing" target="_blank"><span>(CLick)</span>CV</a></li>
+                    	<li id="resume"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMSVhTSTd1ekY5cVU" target="_blank"><span>(Click)</span> Resume</a></li>
+                    	<li id="CV"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMLWYwaGRmVXA3MTQ" target="_blank"><span>(Click)</span>CV</a></li>
                     </ul>
                 </li>
             	<li id="monkey" class="page">
@@ -79,7 +79,6 @@
         <p>Proudly Hosted, and Handled using:</p> 
         <p><a href="http://pages.github.com/"><img src="http://pages.github.com/images/logo.svg">
         </a></p>
-       <a href="http://www.freedomain.co.nr/" target="_blank" title="Free Domain Name"></a>
         <p>-Ankit.Vadehra | "The Code is free, but it's Priceless."</p>
         </center>	
         <!-- #footer end -->
