--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a Data Science Engineer @ <a href="http://www.kayako.com/">Kayako</a>, working on automated and parallel ETL pipeline.<br>I graduated in May, 2016 from <a href="http://www.vit.ac.in/">VIT University, Vellore</a>, with a <span title="B.Eng">B.Tech in Computer Science</span>. I have succinct interest in Information Retrieval, Machine Learning and Natural Language Processing.<br><br>I love <a href="/blog/projects.html">Coding</a>, Good music &amp; watching TV Series.</p>
+                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an undergraduate CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><brI have succinct interest in Machine Learning and Natural Language Processing.<br><br>I love <a href="/blog/projects.html">Coding</a>, Good music &amp; watching TV Series.</p>
                                         
                 </li>
             	<li id="contact" class="page">
@@ -56,10 +56,9 @@
                     <b><p style="font-size:22px"><i><font color="#9445BD">Want to get in touch? Drop me a Line.</p></font></i></b>
                     <ul>
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
-                    	<li id="email"><a href="#"><span style="font-size: 24px;">ankit.vadehra2012@vit.ac.in</span> Email(VIT)</a></li>
+                    	<li id="email"><a href="#"><span style="font-size: 24px;">avadehra@uwaterloo.ca</span> Email(UWaterloo)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMTGdVc3ZIUHFTZHc" target="_blank"><span>(Click)</span> Resume</a></li>
-                    	<li id="CV"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMbXVfYjBfTFI5cDg" target="_blank"><span>(Click)</span>CV</a></li>
+                    	<li id="resume"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMT3Fic0M4SjRFbzQ" target="_blank"><span>(Click)</span> Resume</a></li>
                     </ul>
                 </li>
             	<li id="monkey" class="page">
