Adding Drawing and Updating Blog.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                         <li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
                         <li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
                         <li id="blog"><a href="/blog/blog.html" target="_top">Blog</a></li>
+                        <li id="drawings"><a href="/drawing/drawing.html" target="_top">Drawings</a></li>
                     	<li id="facebook"><a href="https://www.facebook.com/ankit.vadehra" target="_top">Facebook</a></li>
-                    	<li id="gplus"><a href="https://plus.google.com/+AnkitVadehr%C4%81" target="_top">Google+</a></li>
-                    	<li id="quora"><a href="http://www.quora.com/Ankit-Vadehra" target="_top">Quora</a></li>
                     	<li id="twitter"><a href="http://www.twitter.com/ankitvad" target="_top">Twitter</a></li>
 
                     </ul>
@@ -45,7 +44,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an undergraduate CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><brI have succinct interest in Machine Learning and Natural Language Processing.<br><br>I love <a href="/blog/projects.html">Coding</a>, Good music &amp; watching TV Series.</p>
+                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Research Intern @<a href="https://www.borealisai.com/">BorealisAI</a> a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an Undergrad CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><br>I do Deep Learning with a focus on Natural Language Processing.<br><br>I like <a href="/blog/blog.html">Writing</a>, <a href="/drawing/drawing.html">Drawing</a>, <a href="/blog/projects.html">Code</a>, Music &amp; Comedy TV.</p>
                                         
                 </li>
             	<li id="contact" class="page">
