--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -21,6 +21,7 @@
       <div class=body>
       <div class=entry-wrapper>
 <p>RANDOM DRAWINGS</p>
+<img src="3.PNG">
 <img src="2.PNG">
 <img src="1.PNG">
   </div>
