--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
                         <li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
                         <li id="blog"><a href="/blog/blog.html" target="_top">Blog</a></li>
-                        <li id="drawings"><a href="/drawing/drawing.html" target="_top">Drawings</a></li>
+                        <li id="drawings"><a href="/drawing/drawing.html" target="_top">Bad-Drawings</a></li>
                     	<li id="facebook"><a href="https://www.facebook.com/ankit.vadehra" target="_top">Facebook</a></li>
                     	<li id="twitter"><a href="http://www.twitter.com/ankitvad" target="_top">Twitter</a></li>
 
