--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -11,10 +11,10 @@
       </div>
       <div class=navigation>
         <ul>
-        	<li><a href="/">home</a>
-            <li><a href="/drawing/drawing.html">drawings</a>
-          <li><a href="/blog/blog.html">blog</a>
-          <li><a href="/blog/projects.html">projects</a>
+        	<li><a href="/">home</a></li>
+            <li><a href="/drawing/drawing.html">drawings</a></li>
+          <li><a href="/blog/blog.html">blog</a></li>
+          <li><a href="/blog/projects.html">projects</a></li>
           </ul>
       </div>
       <div class=body>
@@ -25,11 +25,11 @@
 <img src="2.PNG">
 <img src="1.PNG">
   </div>
-      <div class=footer>
+      <footer class="footer">
         <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="http://www.twitter.com/ankitvad">Twitter</a></p>
-      </div>
+      </footer>
 </div>
 </div>
   </body>
