--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -25,11 +25,11 @@
 <img src="2.PNG">
 <img src="1.PNG">
   </div>
-      <footer class="footer">
+      <div class="footer">
         <p>Blog Powered using <a href="http://github.com/ankitvad/caffeinepost">CaffeinePost</a></p>
         <p>You can find me at:</p>
         <p><a href="http://github.com/ankitvad">GitHub</a>, <a href="http://www.linkedin.com/in/ankitvad">LinkedIn</a>, <a href="https://www.facebook.com/ankit.vadehra">Facebook</a>,<br><a href="http://www.twitter.com/ankitvad">Twitter</a></p>
-      </footer>
+      </div>
 </div>
 </div>
   </body>
