--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -20,6 +20,8 @@
       <div class=body>
       <div class=entry-wrapper>
 <p>RANDOM DRAWINGS and TRACINGS (I Love! :D )</p>
+<img src="7.PNG">
+<img src="6.PNG">
 <img src="5.PNG">
 <img src="4.PNG">
 <img src="3.PNG">
