--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Research Intern @<a href="https://www.borealisai.com/">BorealisAI</a> a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an Undergrad CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><br>I do Deep Learning with a focus on Natural Language Processing.<br><br>I like <a href="/blog/blog.html">Writing</a>, <a href="/drawing/drawing.html">Bad-Drawing</a>, <a href="/blog/projects.html">Code</a>, Music &amp; Comedy TV.</p>
+                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Research Intern @<a href="https://www.borealisai.com/">BorealisAI</a> a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an Undergrad CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><br>I do Deep Learning with a focus on Natural Language Processing.<br><br>I like <a href="/drawing/drawing.html">Bad-Drawing</a>, <a href="/blog/projects.html">Code</a>, Music &amp; Comedy TV.</p>
                                         
                 </li>
             	<li id="contact" class="page">
