--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -20,7 +20,11 @@
       <div class=body>
       <div class=entry-wrapper>
 <p>RANDOM DRAWINGS and TRACINGS (I Love! :D )</p>
+<img src="9.PNG">
+<img src="8.PNG">
 <img src="7.PNG">
+<img src="11.PNG">
+<img src="10.PNG">
 <img src="6.PNG">
 <img src="5.PNG">
 <img src="4.PNG">
