--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     	<li id="g_email"><a href="#"><span style="font-size: 24px;">ankitvad@gmail.com</span> Email</a></li>
                     	<li id="email"><a href="#"><span style="font-size: 24px;">avadehra@uwaterloo.ca</span> Email(UWaterloo)</a></li>
                     	<li id="skype"><a href="#"><span>ankit.vadehra</span> Skype</a></li>
-                    	<li id="resume"><a href="https://drive.google.com/open?id=0B2JF3-xa2BUMT3Fic0M4SjRFbzQ" target="_blank"><span>(Click)</span> Resume</a></li>
+                    	<li id="resume"><a href="https://drive.google.com/file/d/0B2JF3-xa2BUMT3Fic0M4SjRFbzQ/view?usp=sharing&resourcekey=0-9AzW_2olUntBhtOiFEU7jw" target="_blank"><span>(Click)</span> Resume</a></li>
                     </ul>
                 </li>
             	<li id="monkey" class="page">
