--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                         <li id="linkedin"><a href="http://www.linkedin.com/in/ankitvad" target="_top">LinkedIn</a></li>
                         <li id="github"><a href="http://github.com/ankitvad" target="_top">GitHub</a></li>
                         <li id="blog"><a href="/blog/blog.html" target="_top">Blog</a></li>
-                        <li id="drawings"><a href="/drawing/drawing.html" target="_top">Bad-Drawings</a></li>
                     	<li id="facebook"><a href="https://www.facebook.com/ankit.vadehra" target="_top">Facebook</a></li>
                     	<li id="twitter"><a href="http://www.twitter.com/ankitvad" target="_top">Twitter</a></li>
 
@@ -44,7 +43,7 @@
                     <a href="#networks" class="nav networks">Networks</a>
                     <a href="#contact" class="nav contact">Contact</a>
                     <h2>About</h2>
-                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Research Intern @<a href="https://www.borealisai.com/">BorealisAI</a> a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an Undergrad CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><br>I do Deep Learning with a focus on Natural Language Processing.<br><br>I like <a href="/drawing/drawing.html">Bad-Drawing</a>, <a href="/blog/projects.html">Code</a>, Music &amp; Comedy TV.</p>
+                    <p>Heya! I'm Ankit Vadehra, a Graduate <a href="https://cs.uwaterloo.ca/">CS</a> student @<a href="https://uwaterloo.ca/">UWaterloo</a>.<br><br>Previously, I was a Research Intern @<a href="https://www.borealisai.com/">BorealisAI</a> a Data Science Engineer @<a href="http://www.kayako.com/">Kayako</a> and an Undergrad CS student at <a href="http://www.vit.ac.in/">VIT University, Vellore</a>.<br><br>I do Deep Learning with a focus on Natural Language Processing.<br><br>I like <a href="/blog/projects.html">Code</a>, Music &amp; Comedy TV.</p>
                                         
                 </li>
             	<li id="contact" class="page">
